--- a/Source Code/index.html
+++ b/Source Code/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="mb-3">
       <label class="form-label">
-      Celkový čas seriálu:
+      Celkový čas pôvodného seriálu:
       </label>
       <div class="row">
         <div class="col-md-6">
